--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "./node_modules/.bin/ng serve",
     "build": "./node_modules/.bin/ng build",
     "watch": "./node_modules/.bin/ng build --watch --configuration development",
-    "test": "./node_modules/.bin/ng test"
+    "test": "./node_modules/.bin/ng test",
+    "build-start": "npm run build && ./node_modules/.bin/http-server dist/syncfusion"
   },
   "private": true,
   "dependencies": {
@@ -18,6 +19,9 @@
     "@angular/platform-browser": "~12.1.0",
     "@angular/platform-browser-dynamic": "~12.1.0",
     "@angular/router": "~12.1.0",
+    "@syncfusion/ej2-angular-buttons": "^19.2.47",
+    "@syncfusion/ej2-angular-lists": "^19.2.49",
+    "@syncfusion/ej2-angular-navigations": "^19.2.51",
     "@syncfusion/ej2-angular-pivotview": "^19.2.51",
     "@syncfusion/ej2-angular-treegrid": "^19.2.51",
     "rxjs": "~6.6.0",
@@ -30,6 +34,7 @@
     "@angular/compiler-cli": "~12.1.0",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
+    "http-server": "^0.12.3",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
