--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@syncfusion/ej2-angular-lists": "^19.2.49",
     "@syncfusion/ej2-angular-navigations": "^19.2.51",
     "@syncfusion/ej2-angular-pivotview": "^19.2.51",
+    "@syncfusion/ej2-angular-popups": "^19.2.55",
     "@syncfusion/ej2-angular-treegrid": "^19.2.51",
+    "bootstrap": "^5.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
